fix image shifting issue and nav bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,14 +168,15 @@ a {
 
 .portfolio-item {
   width: 100%;
-  margin-bottom: 23px;
+  padding: 10%;
+  margin-bottom: 75px;
   position: relative;
   background-color: #242d33;
   opacity: .9;
+  overflow: hide;
 }
 
 .portfolio-item:hover {
-  display: table;
   opacity: 1;
   -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
@@ -185,17 +186,20 @@ a {
 
 .portfolio-item img {
   width: 70%;
-  position: absolute;
+  margin: 10% 15%;
+  /*max-width: 260px;
+  margin: 15% 15%;*/
+  /*position: absolute;
   top: 25%;
   left: 50%;
-  transform: translate(-50%, -25%);
+  transform: translate(-50%, -25%);*/
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
 .item-label {
   position: absolute;
-  bottom: 0;
+  bottom: -50px;
   left: 0;
   width: 100%;
   height: 50px;
@@ -248,7 +252,7 @@ a {
   border: 2px solid #ededed;
   color: #363636;
   opacity: 1;
-  padding: 7px 5px 5px 10px;
+  padding: 10%;
 }
 
 .vert-item {
@@ -317,7 +321,7 @@ a {
   .col3 {
     width: 100%;
     float: none;
-    overflow: auto;
+    overflow: visible;;
   }
 
   .col3 .vert-item {
@@ -396,5 +400,13 @@ a {
 
   .horiz-item {
     max-height: 200px;
+  }
+}
+
+
+/* Fix nav display bug that occurs when resizing browser window */
+@media screen and (min-width: 541px) {
+  .navlinks li {
+    display: inline;
   }
 }
